# mlp_img_classification_cpp

./: .gitignore  CMakeLists.txt  MLP_ADAM.pro
irm/irm_test/: CMakeLists.txt  irm_mlp_test.cpp  irm_test.pro
irm/irm_train_sgd/: CMakeLists.txt  irm_mlp_train_sgd.cpp  irm_train_sgd.pro
libmlp/: CMakeLists.txt  MLP_Layer.cpp  MLP_Layer.h  MLP_Layer_ADAM.cpp  MLP_Layer_ADAM.h  MLP_Layer_SGD.cpp  MLP_Layer_SGD.h  MLP_Network.cpp  MLP_Network.h  MLP_Network_ADAM.cpp  MLP_Network_ADAM.h  MLP_Network_SGD.cpp  MLP_Network_SGD.h  libmlp.pro
libread/: CMakeLists.txt  CT2D.cpp  CT2D.h  Echo.cpp  Echo.h  IRM2D.cpp  IRM2D.h  gnuplot_utilities.cpp  gnuplot_utilities.h  libread.pro  progress_bar.cpp  progress_bar.h  timing_functions.cpp  timing_functions.h
